# libsbmr

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TODO
assets/shaders/: basic.frag  basic.vert
cmake/: FindCGLM.cmake  FindGLAD.cmake  FindGLFW.cmake
mk/: os.mk  tools.mk
src/: BMR.cpp  BMR.hpp  Coloring.hpp  Geom.hpp  Lin.hpp  Macros.hpp  Main.cpp  String.cpp  String.hpp  StringView.hpp  Types.hpp  gl.c  gl.h  io.c  io.h  log.h  main.c  shader.c  shader.h
src/Win32/: Keys.hpp  Misc.hpp  ScopedDC.hpp
